--- a/split-manager-test.html
+++ b/split-manager-test.html
@@ -177,34 +177,40 @@
   // =========================
   // ACC car model ID -> name
   // =========================
-  const CAR_MODELS = {
-    0: "Porsche 991 GT3 R (2018)",
-    1: "Mercedes-AMG GT3 (2015)",
-    2: "Ferrari 488 GT3 (2018)",
-    3: "Audi R8 LMS (2015)",
-    4: "Lamborghini Huracán GT3 (2015)",
-    5: "McLaren 650S GT3",
-    6: "Nissan GT-R Nismo GT3 (2018)",
-    7: "BMW M6 GT3",
-    8: "Bentley Continental GT3 (2018)",
+  // ACC Car Model mapping for YOUR SimGrid entrylist.json
+// This mapping is based on the IDs actually present in your uploaded file.
+const CAR_MODELS = {
+  // Older IDs (keep these)
+  0: "Porsche 991 GT3 R (2018)",
+  1: "Mercedes-AMG GT3 (2015)",
+  2: "Ferrari 488 GT3 (2018)",
+  3: "Audi R8 LMS (2015)",
+  4: "Lamborghini Huracán GT3 (2015)",
+  5: "McLaren 650S GT3",
+  6: "Nissan GT-R Nismo GT3 (2018)",
+  7: "BMW M6 GT3",
+  8: "Bentley Continental GT3 (2018)",
+  9: "Porsche 991.2 GT3 R (2019)",
+  10: "Ferrari 488 GT3 Evo (2020)",
+  11: "Mercedes-AMG GT3 Evo (2020)",
+  12: "Lamborghini Huracán GT3 Evo (2019)",
+  13: "McLaren 720S GT3 (2019)",
+  14: "Audi R8 LMS Evo (2019)",
+  15: "Honda NSX GT3 (2019)",
+  16: "Lexus RC F GT3",
 
-    9: "Porsche 991.2 GT3 R (2019)",
-    10: "Ferrari 488 GT3 Evo (2020)",
-    11: "Mercedes-AMG GT3 Evo (2020)",
-    12: "Lamborghini Huracán GT3 Evo (2019)",
-    13: "McLaren 720S GT3 (2019)",
-    14: "Audi R8 LMS Evo (2019)",
-    15: "Honda NSX GT3 (2019)",
-    16: "Lexus RC F GT3",
-    17: "Lamborghini Huracán Super Trofeo",
+  // IMPORTANT: your file uses these IDs for modern cars
+  20: "Ferrari 296 GT3",
+  21: "Honda NSX GT3 Evo",         // your file uses 21 for NSX Evo
+  25: "Mercedes-AMG GT3 2020",
+  26: "BMW M4 GT3",
+  31: "Audi R8 LMS Evo II",
+  32: "Ferrari 296 GT3",           // your file also uses 32 for 296
+  34: "Porsche 992 GT3 R",
+  35: "McLaren 720S GT3 Evo",
+  36: "Ford Mustang GT3"
+};
 
-    18: "BMW M4 GT3",
-    19: "Audi R8 LMS Evo II (2022)",
-    20: "Ferrari 296 GT3",
-    21: "Lamborghini Huracán GT3 Evo2",
-    22: "Porsche 992 GT3 R",
-    23: "McLaren 720S GT3 Evo"
-  };
 
   // =========================
   // SimGrid Entrylist parsing helpers
