--- a/gteam3.html
+++ b/gteam3.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
-    /* Optional: IFWL background image (drop if you don't want it) */
+    /* Optional: IFWL background image  */
     body{
       background: #050612;
       background-image: url("ifwl_bg.webp");
@@ -76,7 +76,7 @@
         <div class="mt-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
           <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
             <div class="font-bold">Format</div>
-            <div class="text-white/80 mt-1">GT3 only • Teams of 3 • 10 weeks</div>
+            <div class="text-white/80 mt-1">GT3 only • Teams of 3 • 3 Races</div>
           </div>
 
           <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
@@ -108,16 +108,14 @@
             <h3 class="font-extrabold text-lg">Driver Order Rotation</h3>
             <div class="text-white/80 mt-3 space-y-2">
               <p>• You cannot use the same starting driver two rounds in a row.</p>
-              <p>• Rotate starters: Driver A → Driver B → Driver C → repeat.</p>
+              <p>• Rotate starters: Driver A → Driver B → Driver C.</p>
             </div>
           </div>
 
           <div class="rounded-2xl bg-white/5 border border-white/10 p-6">
-            <h3 class="font-extrabold text-lg">Team Points + Drop Rounds</h3>
+            <h3 class="font-extrabold text-lg">Team Points</h3>
             <div class="text-white/80 mt-3 space-y-2">
               <p>• Points are awarded to the team.</p>
-              <p>• Best 9 results count.</p>
-              <p>• Worst round is dropped.</p>
             </div>
           </div>
 
@@ -158,27 +156,6 @@
                 <tr class="bg-black/20">
                   <td class="px-4 py-3">3</td><td class="px-4 py-3">Kyalami</td><td class="px-4 py-3">Sunset</td><td class="px-4 py-3">Light Rain</td>
                 </tr>
-                <tr class="bg-black/10">
-                  <td class="px-4 py-3">4</td><td class="px-4 py-3">Misano</td><td class="px-4 py-3">Night</td><td class="px-4 py-3">Clear</td>
-                </tr>
-                <tr class="bg-black/20">
-                  <td class="px-4 py-3">5</td><td class="px-4 py-3">Paul Ricard</td><td class="px-4 py-3">Midday</td><td class="px-4 py-3">Heavy Rain</td>
-                </tr>
-                <tr class="bg-black/10">
-                  <td class="px-4 py-3">6</td><td class="px-4 py-3">Donington Park</td><td class="px-4 py-3">Sunset</td><td class="px-4 py-3">Overcast</td>
-                </tr>
-                <tr class="bg-black/20">
-                  <td class="px-4 py-3">7</td><td class="px-4 py-3">Oulton Park</td><td class="px-4 py-3">Midday</td><td class="px-4 py-3">Clear</td>
-                </tr>
-                <tr class="bg-black/10">
-                  <td class="px-4 py-3">8</td><td class="px-4 py-3">Silverstone</td><td class="px-4 py-3">Sunrise</td><td class="px-4 py-3">Light Rain</td>
-                </tr>
-                <tr class="bg-black/20">
-                  <td class="px-4 py-3">9</td><td class="px-4 py-3">Bathurst</td><td class="px-4 py-3">Sunset</td><td class="px-4 py-3">Clear</td>
-                </tr>
-                <tr class="bg-black/10">
-                  <td class="px-4 py-3">10</td><td class="px-4 py-3">Barcelona</td><td class="px-4 py-3">Night</td><td class="px-4 py-3">Overcast</td>
-                </tr>
               </tbody>
             </table>
           </div>
@@ -186,7 +163,7 @@
 
         <!-- Footer note -->
         <div class="mt-10 text-white/60 text-sm">
-          Tip: Place <span class="text-white/80 font-semibold">gteam3_logo.png</span> and <span class="text-white/80 font-semibold">ifwl_bg.webp</span> in the same folder as this HTML file in your GitHub repo.
+          Tip: All Drivers must be apart of the IFWL discord, Password changes per event and will be updated in the dedicated discord channel.
         </div>
       </section>
     </main>
