--- a/r5r.html
+++ b/r5r.html
@@ -78,6 +78,57 @@
       border-top:1px solid var(--border);
       background:rgba(255,255,255,.02);
     }
+
+    .example{
+      padding:12px;
+      border-top:1px solid var(--border);
+      background:rgba(255,255,255,.02);
+    }
+    .example h3{
+      margin:0 0 8px;
+      font-size:14px;
+      color:var(--text);
+      letter-spacing:.2px;
+    }
+    .example p{
+      margin:0 0 10px;
+      font-size:13px;
+      color:var(--muted);
+    }
+    table{
+      width:100%;
+      border-collapse:separate;
+      border-spacing:0;
+      font-size:13px;
+      overflow:hidden;
+      border:1px solid var(--border);
+      border-radius:12px;
+      background:rgba(255,255,255,.015);
+    }
+    th, td{
+      padding:10px 10px;
+      border-bottom:1px solid var(--border);
+      vertical-align:top;
+    }
+    th{
+      text-align:left;
+      color:var(--muted);
+      font-weight:650;
+      background:rgba(255,255,255,.03);
+    }
+    tr:last-child td{border-bottom:none}
+    .pillmini{
+      display:inline-block;
+      padding:3px 8px;
+      border-radius:999px;
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.02);
+      color:var(--muted);
+      font-size:12px;
+      white-space:nowrap;
+    }
+    .good{color:var(--accent);font-weight:650}
+    .bad{color:#ff6b6b;font-weight:650}
     .qa h2{margin:0 0 10px}
     details{
       border:1px solid var(--border);
@@ -124,10 +175,68 @@
       </section>
 
       <section class="imgwrap" aria-label="Round 5 review explainer image">
-        <!-- Put the image file in the same folder as this HTML and name it exactly like below -->
         <img alt="Round 5 review explainer" src="r5review_explainer.png" />
         <div class="caption">
           One-time adjustment applied when a driver changes class at the mid-season review. Capped at ±30 points.
+        </div>
+
+        <div class="example">
+          <h3>Example sheet (fake names)</h3>
+          <p>
+            This shows the same starting points moving up and moving down. With 100 points, 15% is 15 so the cap doesn’t kick in. With 235 points, 15% is 35.25 so the cap limits it to 30.
+          </p>
+
+          <table aria-label="Points adjustment examples">
+            <thead>
+              <tr>
+                <th style="width:20%;">Driver</th>
+                <th style="width:14%;">Move</th>
+                <th style="width:14%;">Starting points</th>
+                <th style="width:14%;">15% calc</th>
+                <th style="width:14%;">Cap applied</th>
+                <th style="width:12%;">Change</th>
+                <th style="width:12%;">New points</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Alex Example</td>
+                <td><span class="pillmini">AM → PRO</span></td>
+                <td>100</td>
+                <td>-15</td>
+                <td>No</td>
+                <td class="bad">-15</td>
+                <td>85</td>
+              </tr>
+              <tr>
+                <td>Jamie Example</td>
+                <td><span class="pillmini">PRO → AM</span></td>
+                <td>100</td>
+                <td>+15</td>
+                <td>No</td>
+                <td class="good">+15</td>
+                <td>115</td>
+              </tr>
+              <tr>
+                <td>Casey Example</td>
+                <td><span class="pillmini">AM → PRO</span></td>
+                <td>235</td>
+                <td>-35.25</td>
+                <td>Yes (max 30)</td>
+                <td class="bad">-30</td>
+                <td>205</td>
+              </tr>
+              <tr>
+                <td>Riley Example</td>
+                <td><span class="pillmini">PRO → AM</span></td>
+                <td>235</td>
+                <td>+35.25</td>
+                <td>Yes (max 30)</td>
+                <td class="good">+30</td>
+                <td>265</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </section>
     </div>
@@ -149,10 +258,10 @@
       <details>
         <summary>“Why do overall points change, and not just class points?”</summary>
         <p>
-          Because the championship is one season-long story, and class strength isn’t the same. Yes, the points table is the same for AM and PRO, but the strength of field is different.
-          Someone might have five “top of the field” finishes in AM and build a big total — but if they’d been in PRO all season, would they realistically have scored the same number of top finishes?
-          Most of the time, no. If we only changed “class points” and left overall untouched, a driver could move up and still carry a lower-class advantage into the overall championship without proving that pace
-          against the stronger grid. Adjusting the overall total is the cleanest way to keep the overall fight meaningful while still respecting what you achieved earlier in the season.
+          Because the points table might be the same for AM and PRO, but the strength of field isn’t. Someone can rack up a run of top finishes in AM and build a big total,
+          but if they’d been in PRO from round 1, would they realistically have had the same number of “top of the field” results against the stronger grid? Usually not.
+          If we only changed class points and left overall untouched, that AM run would carry straight into the overall championship the moment they move up, and it would skew the main table.
+          Adjusting the overall total once, with a cap, is the clean way to respect what they achieved while still keeping the overall fight fair when the competition level changes.
         </p>
       </details>
 
@@ -174,9 +283,8 @@
       <details>
         <summary>“We were all in the same race, so why change points at all?”</summary>
         <p>
-          Because the class move is about the strength of your competition across the season, not a single race.
-          If you scored heavily in AM and get moved up, you wouldn’t have scored the same total against the PRO field earlier in the season.
-          The adjustment keeps the overall championship meaningful for everyone.
+          Because the class move is about the strength of your competition across the season, not a single race. If you scored heavily in AM and get moved up, you wouldn’t have scored the same total
+          against the PRO field earlier in the season. The adjustment keeps the overall championship meaningful for everyone.
         </p>
       </details>
 
@@ -190,8 +298,7 @@
       <details>
         <summary>“How is it capped at 30? What does that mean in practice?”</summary>
         <p>
-          Even though the standard adjustment is 15%, we stop the change at ±30 points.
-          If 15% would deduct 45, we only deduct 30. If 15% would add 40, we only add 30.
+          Even though the standard adjustment is 15%, we stop the change at ±30 points. If 15% would deduct 45, we only deduct 30. If 15% would add 40, we only add 30.
           The cap exists to prevent drama and keep the season competitive.
         </p>
       </details>
