--- a/r5r.html
+++ b/r5r.html
@@ -298,11 +298,30 @@
         <details>
           <summary>“Why do overall points change, and not just class points?”</summary>
           <p>
-            Because the points table might be the same for AM and PRO, but the strength of field isn’t. Someone can rack up a run of top finishes in AM and build a big total,
-            but if they’d been in PRO from round 1, would they realistically have had the same number of “top of the field” results against the stronger grid? Usually not.
-            If we only changed class points and left overall untouched, that AM run would carry straight into the overall championship the moment they move up, and it would skew the main table.
-            Adjusting the overall total once, with a cap, is the clean way to respect what they achieved while still keeping the overall fight fair when the competition level changes.
-          </p>
+    Because AM and PRO use the same scoring system, but the strength of field is very different.
+    A driver might score heavily in AM with multiple “top of field” finishes, but if they had been
+    racing in PRO from the start, they realistically would not have achieved the same results
+    against a stronger grid.
+  </p>
+  <p>
+    Example:
+  </p>
+  <p>
+    Driver A spends the first half of the season in AM and scores 200 points.<br>
+    Driver B spends the same time in PRO and scores 170 points.
+  </p>
+  <p>
+    If Driver A is promoted and we only changed class points, Driver A would enter PRO already
+    30 points ahead — despite Driver B having raced tougher competition all season.
+  </p>
+  <p>
+    That would reward an easier first half of the season.
+  </p>
+  <p>
+    So instead, IFWL applies a small one-time adjustment to the overall championship points when a driver
+    changes class. This balances the difference in competition level while still respecting what the
+    driver achieved earlier in the season. The ±30 point cap exists so nobody’s season gets wrecked.
+  </p>
         </details>
 
         <details>
