--- a/s2rules.html
+++ b/s2rules.html
@@ -828,7 +828,7 @@
             <div class="chev">+</div>
           </summary>
           <div class="content">
-            <p><strong>Official commentators:</strong> “ZE LEXI” and potentially “WAPS”.</p>
+            <p><strong>Official commentators:</strong> “ZELEXI” & “ENZO”.</p>
             <p><strong>Commentary availability:</strong></p>
             <ul>
               <li>PC Beginner level series: no live commentary (results only)</li>
