--- a/s2rules.html
+++ b/s2rules.html
@@ -934,7 +934,7 @@
             <tr><td><span class="pill">BOP</span></td><td>Balance of Performance</td></tr>
           </tbody>
         </table>
-        <p class="muted">A complete list of steward codes and explanations is provided below in “Stewards Codes Explained”.</p>
+        <p class="muted">All IFWL events will have serveds named IFWL followed by event name - example : IFWL PC PRO AM - you can simply search IFWL on raceday in the respective games lobby browser”.</p>
 
         <h3>IFWL Race Server Information</h3>
         <table>
